daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N5_wrong_field_type/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a76365840186df68e5a1bb5d3096e9ae4a183e3edb13e3cc289ad3673afcbbcbc31af16e778db83cfa433eb00235a8dec9e8d2f99897f7da6bd5977af2490d544fafd17ad
